--- a/Main.html
+++ b/Main.html
@@ -5,6 +5,8 @@
         <title>Rothko Painting</title>
     </head>
     <body>
+        <div class="canvas">
 
+        </div>
     </body>
 </html>
