Added a div element inside the canvas div class with a class value of frame.

--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div class="canvas">
+            <div class="frame">
 
+            </div>
         </div>
     </body>
 </html>
